--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "santigarcor/laratrust": "^8.3"
+        "santigarcor/laratrust": "^8.3",
+        "stevebauman/location": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
